--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@babel/runtime": "^7.14.0",
     "advanced-css-reset": "^1.2.2",
+    "axios": "^0.21.1",
     "emoji-log": "^1.0.2",
     "webext-base-css": "^1.3.1",
     "webextension-polyfill": "^0.8.0"
