--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "advanced-css-reset": "^1.2.2",
     "axios": "^0.21.1",
     "emoji-log": "^1.0.2",
+    "postcss-import": "^14.0.2",
+    "tailwindcss": "^2.1.3",
     "webext-base-css": "^1.3.1",
     "webextension-polyfill": "^0.8.0"
   },
@@ -44,7 +46,7 @@
     "@babel/preset-env": "^7.14.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^3.0.0",
