--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "advanced-css-reset": "^1.2.2",
     "axios": "^0.21.1",
     "emoji-log": "^1.0.2",
+    "jquery": "^3.6.0",
     "postcss-import": "^14.0.2",
     "tailwindcss": "^2.1.3",
     "webext-base-css": "^1.3.1",
