--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "Sample WebExtension",
-  "version": "0.0.0",
+  "name": "Profilehunt job application tracker and organizer",
+  "version": "0.0.1",
   "icons": {
     "16": "assets/icons/favicon-16.png",
     "32": "assets/icons/favicon-32.png",
@@ -9,24 +9,21 @@
     "128": "assets/icons/favicon-128.png"
   },
 
-  "description": "Sample description",
-  "homepage_url": "https://github.com/abhijithvijayan/web-extension-starter",
-  "short_name": "Sample Name",
+  "description": "Add jobs from any website to track them on a kanban board",
+  "homepage_url": "https://profilehunt.net",
+  "short_name": "Profilehunt job tracker",
 
   "permissions": [
-    "activeTab",
-    "storage",
-    "http://*/*",
-    "https://*/*"
+    "activeTab"
   ],
 
   "__dev__content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "__prod__content_security_policy": "script-src 'self'; object-src 'self'",
 
 
-  "__chrome|firefox__author": "abhijithvijayan",
+  "__chrome|firefox__author": "profilehunt",
   "__opera__developer": {
-    "name": "abhijithvijayan"
+    "name": "profilehunt"
   },
 
   "__firefox__applications": {
@@ -46,16 +43,9 @@
       "48": "assets/icons/favicon-48.png",
       "128": "assets/icons/favicon-128.png"
     },
-    "default_title": "tiny title",
+    "default_title": "Profilehunt",
     "__chrome|opera__chrome_style": false,
     "__firefox__browser_style": false
-  },
-
-  "__chrome|opera__options_page": "options.html",
-  "options_ui": {
-    "page": "options.html",
-    "open_in_tab": true,
-    "__chrome__chrome_style": false
   },
 
   "background": {
@@ -63,15 +53,5 @@
       "js/background.bundle.js"
     ],
     "__chrome|opera__persistent": false
-  },
-
-  "content_scripts": [{
-    "matches": [
-      "http://*/*",
-      "https://*/*"
-    ],
-    "js": [
-      "js/contentScript.bundle.js"
-    ]
-  }]
+  }
 }
