--- a/source/manifest.json
+++ b/source/manifest.json
@@ -14,7 +14,10 @@
   "short_name": "Profilehunt job tracker",
 
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "*://profilehunt.net/*",
+    "*://0.0.0.0:3000/*",
+    "tabs"
   ],
 
   "__dev__content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
