--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,12 +1,12 @@
 {
   "manifest_version": 2,
-  "name": "Profilehunt job application tracker and organizer",
+  "name": "Profilehunt job application organizer",
   "version": "0.0.1",
   "icons": {
     "16": "assets/icons/favicon-16x16.png",
     "32": "assets/icons/favicon-32x32.png",
-    "48": "assets/icons/apple-touch-icon-57x57.png",
-    "128": "assets/icons/apple-touch-icon-120x120.png"
+    "57": "assets/icons/apple-touch-icon-57x57.png",
+    "120": "assets/icons/apple-touch-icon-120x120.png"
   },
 
   "description": "Add jobs from any website to track them on a kanban board",
@@ -29,9 +29,6 @@
   },
 
   "__firefox__applications": {
-    "gecko": {
-      "id": "{754FB1AD-CC3B-4856-B6A0-7786F8CA9D17}"
-    }
   },
 
   "__chrome__minimum_chrome_version": "49",
@@ -42,18 +39,11 @@
     "default_icon": {
       "16": "assets/icons/favicon-16x16.png",
       "32": "assets/icons/favicon-32x32.png",
-      "48": "assets/icons/apple-touch-icon-57x57.png",
-      "128": "assets/icons/apple-touch-icon-120x120.png"
+      "57": "assets/icons/apple-touch-icon-57x57.png",
+      "120": "assets/icons/apple-touch-icon-120x120.png"
     },
     "default_title": "Profilehunt job tracker",
     "__chrome|opera__chrome_style": false,
     "__firefox__browser_style": false
-  },
-
-  "background": {
-    "scripts": [
-      "js/background.bundle.js"
-    ],
-    "__chrome|opera__persistent": false
   }
 }
